test/conformance/kuttl/generate/clusterpolicy/cornercases/cpol-clone-sync-reinstall-policy/02-trigger.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cpol-clone-sync-single-source-multiple-targets-trigger-ns
