test/conformance/kuttl/generate/clusterpolicy/cornercases/cpol-clone-sync-reinstall-policy/05-update-source.yaml
apiVersion: v1
kind: Secret
metadata:
  name: regcred
  namespace: cpol-clone-sync-single-source-multiple-targets-ns
type: Opaque
data:
  foo: aGVyZWlzY2hhbmdlZGRhdGE=
