test/conformance/kuttl/generate/clusterpolicy/cornercases/cpol-clone-sync-reinstall-policy/11-assert.yaml
apiVersion: v1
kind: Secret
metadata:
  name: regcred
  namespace: cpol-clone-sync-single-source-multiple-targets-trigger-ns
type: Opaque
data:
  foo: YmFy
